# os2024

./: .gitignore  Makefile  README.md  final.md  lab1.md  lab2.md  lab3.md  lab4.md  make.sh
final/: Makefile  dune-project  final.md  final.opam  final.opam.locked
final/lib/: cp_sem.ml  dune  rw_sem.ml  sem.ml  sem.mli  tuiconf.ml  tuiconf.mli
lab1/: Makefile  basic.cpp  basic.h  semaphore.cpp
lab2/: Makefile  priority-rr-scheduling.c
lab3/: Lab3.lean  Main.lean  Makefile  bankers.lisp  lake-manifest.json  lakefile.lean
lab3/Lab3/: Bankers.lean
lab4/: ConsumerProducer.c  ConsumerProducer.lisp  Makefile
